# velix

./: .editorconfig  .gitignore  ALPHA.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PORTFOLIO.md  README.md  ROADMAP.md  SECURITY.md
.github/: CI_NOTES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  cryptocore-ci.yml  flutter-ci.yml  release.yml
apps/velix_app/: README.md  analysis_options.yaml  pubspec.yaml
backend/: buf.gen.yaml  buf.yaml  go.work  go.work.sum
backend/alpha/: README.md  go.mod
chat-app/: index.html  package-lock.json  package.json
chat-app/src/: main.js  styles.css
cryptocore/: Cargo.toml  rust-toolchain.toml
cryptocore/benches/: primitives.rs
cryptocore/src/: backup.rs  backup_envelope.rs  csprng.rs  error.rs  ffi.rs  handle.rs  identity.rs  lib.rs  livekit.rs  media.rs  sealed_sender.rs  sender_keys.rs  session.rs  test_vectors.rs
cryptocore/tests/: error_test.rs
docs/: beta-polish-report.md
docs/accessibility/: README.md
docs/api/: README.md
docs/architecture/: data-flow.md  security-model.md  system-overview.md
docs/diagrams/: README.md  send-message-sequence.mmd  system-overview.mmd  trust-boundaries.mmd
docs/guides/: deployment.md  local-development.md  testing.md
docs/phase-1/: 00-executive-summary.md  01-competitive-teardown.md  02-ux-gap-analysis.md  03-product-vision.md  04-feature-roadmap.md  05-user-psychology.md  06-system-architecture-sketch.md  07-security-architecture-sketch.md  08-scalability-roadmap.md  09-monetization.md  (+3 more)
(+407 files in other folders)
